# rented_room

./: .gitignore  Developing-Modules.ipynb  Upstage-Parser.ipynb  prompt.py  pyproject.toml  test.ipynb
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: graph.Ipynb  main.py
backend/app/api/: main.py
backend/app/api/routes/: chat.py
backend/app/core/: config.py
backend/app/service/: chain.py  reranker.py  retriever.py  vectorstore.py
backend/prompts/: rented_room.yaml
data_processor/: main.ipynb  processor.py
pre_processing/: csv_to_chroma.ipynb  csv_to_faiss.ipynb  faiss_vectorstore.ipynb  reranker.ipynb  retrievers.ipynb
pre_processing/chroma_db/: chroma.sqlite3
pre_processing/faiss_db/: faiss_index.faiss  faiss_index.pkl
rag_evaluation/: generate_dataset.ipynb  new_generate_dataset.ipynb
split_pdf/: split_merge.ipynb  state.py
